syntax = "proto3";

option go_package = "storage";
option java_package = "io.stackrox.proto.storage";

import "google/protobuf/timestamp.proto";

import "storage/cluster.proto";
import "storage/image.proto";
import "storage/node.proto";
import "protobuf/gogoproto/gogo.proto";

package storage;

message ComplianceResource {
    message ClusterName {
        string id   = 1;
        string name = 2;
    }

    message DeploymentName {
        ClusterName cluster = 1;
        string id           = 2;
        string name         = 3;
        string namespace    = 4;
    }

    message NodeName {
        ClusterName cluster = 1;
        string id           = 2;
        string name         = 3;
    }

    oneof resource {
        ClusterName cluster       = 1;
        DeploymentName deployment = 2;
        NodeName node             = 3;
        ImageName image           = 4;
    }
}

enum ComplianceState {
    COMPLIANCE_STATE_UNKNOWN = 0;
    COMPLIANCE_STATE_SKIP    = 1;
    COMPLIANCE_STATE_NOTE    = 2;
    COMPLIANCE_STATE_SUCCESS = 3;
    COMPLIANCE_STATE_FAILURE = 4;
    COMPLIANCE_STATE_ERROR   = 5;
}

message ComplianceResultValue {
    message Evidence {
        ComplianceState state = 1;
        string message        = 2;
        int32 message_id      = 3;
    }
    repeated Evidence evidence    = 1;
    ComplianceState overall_state = 2;
}

message ComplianceControlResult {
    ComplianceResource resource = 1;
    string control_id           = 2;
    ComplianceResultValue value = 3;
}

message ComplianceDomain {
    Cluster cluster = 1;
    map<string, Node> nodes = 2;
    map<string, ComplianceDeployment> deployments = 3;
}

// Next available tag: 5
message ComplianceRunMetadata {
    string run_id = 1;
    string standard_id = 2;
    string cluster_id = 3;

    google.protobuf.Timestamp start_timestamp  = 4;
    google.protobuf.Timestamp finish_timestamp = 5;

    bool success = 6;
    string error_message = 7;
}

// Next available tag: 6
message ComplianceRunResults {
    message EntityResults {
        map<string, ComplianceResultValue> control_results = 1;
    }

    ComplianceDomain domain            = 1;
    ComplianceRunMetadata run_metadata = 2;

    EntityResults cluster_results                 = 3;
    map<string, EntityResults> node_results       = 4;
    map<string, EntityResults> deployment_results = 5;
}

// Next available tag: 2
message ComplianceStrings {
    repeated string strings = 1;
}

// Next available tag: 31.  Must match the Deployment proto to maintain wire compatibility
message ComplianceDeployment {
    option (gogoproto.goproto_unrecognized) = false;

    string id                                  = 1;
    string name                                = 2;
    uint64 hash                                = 26;
    string type                                = 4;
    string namespace                           = 5;
    string namespace_id                        = 23;
    map<string, string> labels                 = 7;
    map<string, string> pod_labels             = 19;
    string cluster_id                          = 9;
    string cluster_name                        = 10;
}
